Added authentication to user and sessions controller for login/logout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<% flash.each do |name, msg| %>
+  <div class="flash" id="flash_<%= name %>">
+    <%= msg %>
+  </div>
+<% end %>
+
 <%= yield %>
 
 </body>
